--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,14 @@ kafka:
   brokerAddress: localhost:9092
   topic: employee
   groupId: employeeGroup
+spring:
+  datasource:
+    url: jdbc:h2:mem:employeedb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: create
+server:
+  port: 8090
